projects section ui change

--- a/src/pages/styler.css
+++ b/src/pages/styler.css
@@ -3,7 +3,7 @@
   }
   
 .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: rgb(13, 137, 213); 
+    background-image: url("https://i.pinimg.com/564x/20/f3/c9/20f3c9890a3e31f83bcba961e21d0d0e.jpg"); 
     border-radius: 6px; 
   }
   
