--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,14 @@ img{
 @keyframes cursor-disappear {
   to { border-color: transparent; } 
 }
+#myVideo {
+  position: fixed;
+  top:0;
+  left:0;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+  object-fit: cover;
+}
